--- a/code/index.html
+++ b/code/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="code/style.css">
+    <link rel="stylesheet" href="../code/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
-    <script src="code/script.js" defer></script>
+    <script src="../code/script.js" defer></script>
 </head>
 <body>
     <header class="header">
     <div class="top">
         <div class="title">
-            <span id="flower-light"><img src="images/flowers.png" alt="heart icon" class="heart1"></span>
-            <span id="flower-dark" style="display: none"><img src="images/moonflower.png" alt="light mode flower" class="heart1"></span>
+            <span id="flower-light"><img src="../images/flowers.png" alt="heart icon" class="heart1"></span>
+            <span id="flower-dark" style="display: none"><img src="../images/moonflower.png" alt="light mode flower" class="heart1"></span>
                 <h1>
                     Viktorie Nemcova
                 </h1>
     </div>
     <div class="content">
     <a href="https://mail.google.com/mail/u/1/#inbox" target="_blank" class="instagram_button">
-        <img src="images/mail.png" alt="instagram icon" class="instagram_icon">
+        <img src="../images/mail.png" alt="instagram icon" class="instagram_icon">
     </a>
     <a href="https://github.com/auwura" target="_blank" class="mail_button">
-        <img src="images/github.png" alt="mail icon" class="mail_icon">
+        <img src="../images/github.png" alt="mail icon" class="mail_icon">
     </a>
     </div>
     </div>
@@ -33,8 +33,8 @@
     <div class="menu">
         <div class="menu-box">
             <button class="theme-change" id="theme-button" alt="theme change button">
-                <span id="moon-icon"><img src="images/moon.png" alt="moon icon" class="theme-image"></span>
-                <span id="sun-icon" style="display: none"; class="darkmode-images"><img src="images/sun.png" alt="sun icon" class="theme-image"></span>
+                <span id="moon-icon"><img src="../images/moon.png" alt="moon icon" class="theme-image"></span>
+                <span id="sun-icon" style="display: none"; class="darkmode-../images"><img src="../images/sun.png" alt="sun icon" class="theme-image"></span>
             </button>
         </div>
     </div>
@@ -52,4 +52,5 @@
 </body>
 
 </html>
+
 
